methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: '(' expected but identifier found.
  if haveBaggle()
     ^