methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var baggle = false
  for (i <- 1 to 6) {
    avance()
    if (estSurBiscuit())
    	baggle = true
   for (i <-1 to 6)
    recule()
   return baggle
  }
}

for (i <- 1 to 6)
	if haveBaggle()
		return true
	else {
    droite()
    avance()
    gauche()
  }